--- a/views/index.html
+++ b/views/index.html
@@ -9,26 +9,16 @@
    />
    <title>Nicole Gheysens, Villanova 2025</title>
  </head>
-<body class="bg-primary text-white">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Navigation</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="schedule.html">Fall 2024 Schedule</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="Hobbies.html">Hobbies</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+ <body class="bg-primary text-white">
+
+
+  <div id="navbar-container"></div>
+
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"
+  ></script>
  	<script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
@@ -49,5 +39,7 @@
    class="btn btn-light mt-3"
    >Link to Villanova Computing Sciences Department</a
  >
+ <script src="../resources/js/navbar.js"></script>
+ <script>loadNavbar();</script>
 </body>
 </html>
