--- a/views/schedule.html
+++ b/views/schedule.html
@@ -1,40 +1,19 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <link
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-        rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-        crossorigin="anonymous"
-    />
+ <head>
+   <link
+     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+     rel="stylesheet"
+     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+     crossorigin="anonymous"
+   />
     <title>Nicole Gheysens Fall Schedule 2024</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Fall 2024 Schedule</a>
-                  </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
-                </li>
-         <li class="nav-item">
-           <a class="nav-link" href="Hobbies.html">Hobbies</a>
-         </li>
-            </ul>
-        </div>
-    </nav>
-
-    <script
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"
-    ></script>
-
-    <div class="container mt-4">
+    <div id="schedule-container">
+        <div id="navbar-container"></div>
+       
         <h1>Fall 2024 Semester Schedule: Nicole Gheysens</h1>
-
         <table class="table table-bordered">
             <thead>
                 <tr>
@@ -77,5 +56,10 @@
             </tbody>
         </table>
     </div>
+    <button id="toggle-schedule">Hide Schedule</button>
+    <script src="../resources/js/script.js"></script>
+    <script src="../resources/js/navbar.js"></script>
+    <script>loadNavbar();</script>
+    
 </body>
 </html>
